# 03_error_info

./: Cargo.toml  README.md
error-code/: Cargo.toml
error-code-macros/: Cargo.toml
error-code-macros/src/: error_info.rs  lib.rs
error-code/examples/: web.rs
error-code/src/: lib.rs
