[package]
name = "error-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-code-macros = { workspace = true }
thiserror = "1.0.60"

[dev-dependencies]
anyhow = { workspace = true }
error-code = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
